<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".CalculatorActivity">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="0dp" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="8dp" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:background="#00A20808">
        <TextView
                android:text="@string/Calculator_Description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/activityDescription"
                android:textAlignment="center"
                android:textStyle="bold" android:textSize="18sp" android:background="#00641A1A"
                android:backgroundTint="#007C2424"/>
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberSigned|numberDecimal"
                    android:ems="10"
                    android:id="@+id/firstValueEditText" android:hint="@string/Calculator_FirstValue_hint"
                    android:importantForAutofill="no"/>
        </LinearLayout>
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberSigned|numberDecimal"
                    android:ems="10"
                    android:id="@+id/secondValueEditText" android:hint="@string/CalculatorSecondValueHint"
                    android:importantForAutofill="no"/>
        </LinearLayout>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <Button
                    android:text="@string/CalculatorButtonSum"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/sumButton" android:layout_weight="1"
                    android:textSize="18sp" android:onClick="valueSum"/>
            <Button
                    android:text="@string/CalculatorButtonSubtraction"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/minusButton" android:layout_weight="1"
                    android:textStyle="bold" android:textSize="18sp" android:onClick="valueSubtraction"/>
            <Button
                    android:text="@string/CalculatorButtonDivision"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/DivisionButton" android:layout_weight="1"
                    android:textSize="18sp" android:onClick="valueDivision"/>
            <Button
                    android:text="@string/CalculatorButtonMultiplication"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/MultiplicationButton"
                    android:layout_weight="1" android:textSize="18sp" android:onClick="valueMultiplicaton"/>
        </LinearLayout>
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="0dp" android:layout_weight="1">
            <TextView
                    android:text="@string/HowToUseCalculatorDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/howToUseCalculatorDescription"
                    android:textAlignment="center"
            />
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/resultBox" tools:text="@string/Result"
                    android:textAlignment="center" android:textStyle="bold" android:textSize="24sp"
                    android:textColor="@color/colorAccent"/>
        </LinearLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>