<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".CalculatorActivity">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberSigned|numberDecimal"
                android:ems="10"
                android:id="@+id/latitudeBox" android:hint="@string/latitudeHint" android:importantForAutofill="no"/>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberSigned|numberDecimal"
                android:ems="10"
                android:id="@+id/longitudeBox" android:hint="@string/longitudeHint" android:importantForAutofill="no"/>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/markerNameEditText" android:hint="@string/MarkerName"/>
        <Button
                android:text="@string/markerAdd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/button7" android:textStyle="bold"
                android:textAllCaps="false" android:layout_marginBottom="2dp" android:onClick="addNewMarker"/>
        <fragment
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/map"
                tools:context=".MapsActivity"
                android:name="com.google.android.gms.maps.SupportMapFragment"/>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>