<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity" android:backgroundTint="#763481">
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="8dp" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp" android:layout_marginEnd="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="8dp"
            android:backgroundTint="@android:color/holo_blue_dark">
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:backgroundTint="#D500F9">
            <TextView
                    android:text="@string/MapActivity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/textView" android:textStyle="bold"
                    android:textAlignment="center" tools:text="@string/MapActivity" android:textAllCaps="false"/>
            <Button
                    android:text="@string/MapActivityButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/button"
                    android:backgroundTint="@android:color/holo_green_dark" android:onClick="mapActivity"
                    android:textAllCaps="false" android:textStyle="bold" android:textAlignment="center"/>
        </LinearLayout>
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <TextView
                    android:text="@string/Calculator"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/textView2" android:textAlignment="center"
                    android:textStyle="bold"/>
            <Button
                    android:text="@string/Calculator_Button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/button2" android:textAllCaps="false"
                    android:textStyle="bold" android:backgroundTint="@android:color/holo_orange_light"
                    android:onClick="OpenCalculator"/>
        </LinearLayout>
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" tools:visibility="visible" android:visibility="visible">
            <TextView
                    android:text="@string/EmployeeList"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/textView3" android:textAlignment="center"
                    android:textStyle="bold"/>
            <Button
                    android:text="@string/EmployeeButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/button3"
                    android:backgroundTint="@android:color/holo_red_light" android:onClick="employeeActivity"
                    android:textStyle="bold" android:textAllCaps="false"/>
        </LinearLayout>
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" tools:visibility="invisible" android:visibility="invisible">
            <TextView
                    android:text="TextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/textView4"/>
            <Button
                    android:text="Button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/button4"/>
        </LinearLayout>
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:visibility="invisible">
            <TextView
                    android:text="TextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/textView5"/>
            <Button
                    android:text="Button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/button5"/>
        </LinearLayout>
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:visibility="invisible">
            <TextView
                    android:text="TextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/textView6"/>
            <Button
                    android:text="Button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/button6"/>
        </LinearLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>